Deploy-Go-to-Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
  labels:
    app: go-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: go-server
