Deploy-Go-to-Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: demo-app-ingress
spec:
  rules:
  - host: go.anishbista.xyz
    http:
      paths:
      - backend:
          service:
            name: go-server-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - go.anishbista.xyz
    secretName: demo
